--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "@download/blockies": "^1.0.3",
     "@ethersproject/solidity": "^5.1.0",
     "@material-ui/core": "^4.11.0",
-    "@material-ui/icons": "^4.9.1",
+    "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.57",
     "@walletconnect/web3-provider": "^1.6.5",
     "axios": "^0.21.1",
@@ -37,9 +37,9 @@
     "redux-thunk": "^2.3.0",
     "sass": "^1.43.4",
     "use-deep-compare-effect": "^1.6.1",
+    "web-vitals": "^2.1.2",
     "web3": "1.2.11",
-    "web3modal": "^1.9.1",
-    "web-vitals": "^2.1.2"
+    "web3modal": "^1.9.1"
   },
   "scripts": {
     "start": "react-scripts start",
