--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
   "private": true,
   "dependencies": {
     "@download/blockies": "^1.0.3",
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
     "@ethersproject/solidity": "^5.1.0",
-    "@material-ui/core": "^4.11.0",
-    "@material-ui/icons": "^4.11.2",
-    "@material-ui/lab": "^4.0.0-alpha.57",
+    "@mui/icons-material": "^5.3.0",
+    "@mui/lab": "^5.0.0-alpha.65",
+    "@mui/material": "^5.3.0",
+    "@mui/styles": "^5.3.0",
     "@walletconnect/web3-provider": "^1.6.5",
     "axios": "^0.21.1",
     "bignumber.js": "^9.0.1",
@@ -21,7 +24,7 @@
     "i18next": "^19.8.2",
     "i18next-browser-languagedetector": "^6.0.1",
     "moment": "^2.29.1",
-    "notistack": "^1.0.10",
+    "notistack": "^2.0.3",
     "react": "^17.0.0",
     "react-content-loader": "^6.0.1",
     "react-dom": "^17.0.0",
